--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://github.com/surajrt10" target="_blank"  class="fab fa-github"></a>
             <a href="#" class="fab fa-facebook-f"></a>
             <!-- <a href="https://twitter.com/surajrt10" target="_blank" class="fab fa-twitter"></a> -->
-            <a href="#" class="fab fa-instagram"></a>
+            <a href="https://instagram.com/surajrt" class="fab fa-instagram"></a>
             <a href="https://www.linkedin.com/in/surajrt10/" target="_blank" class="fab fa-linkedin"></a>
            
         </div>
@@ -136,6 +136,7 @@
 
             </div>
         </div>
+
 
 
 
