Updated Project Details

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <span>Mini Project</span>
                     <h3>Calculator</h3>
                     <h5>Tech Used: React</h5>
-                    <p>A simple calculator which take the input from the user and gives the output as per the operator used in the input. It takes Input From user on Click and Performs Basic mathematical Operations</p>
+                    <p>A simple calculator Application which takes the input from the user and gives the output as per the operator used in the inputs.</p>
                 </div>
 
             </div>
